--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,3 +1,5 @@
+build_platform:
+  osx_arm64: osx_64
 github:
   branch_name: main
   tooling_branch_name: main
@@ -6,3 +8,8 @@ conda_build:
 conda_forge_output_validation: true
 bot:
   automerge: true
+provider:
+  linux_aarch64: default
+  linux_ppc64le: default
+  win: azure
+test: native_and_emulated
